# ecg

./: AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: 00_PROJECT_BRIEF.md  01_DECISION_LOG.md  02_MILESTONE_PLAN.md  03_ALGORITHM_SCOPE.md  04_IO_CONTRACT.md  05_DETECTOR_STRATEGY.md  06_THIRD_PARTY_EVAL.md  09_CODEX_RUNBOOK.md  10_CODEX_NEXT_TASK.md
ecg_rr_tool/: __init__.py  cli.py  gui.py
ecg_rr_tool/detectors/: __init__.py  base.py  factory.py
tests/: test_fixture_contract.py  test_m2a_eval_smoke.py
tests/fixtures/: bidmc_01_Signals_4000.csv
tools/: evaluate_detectors.py
