[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg-rr-tool"
version = "0.1.0"
description = "Desktop ECG R-peak and RR engineering analysis tool scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
ecg-rr = "ecg_rr_tool.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ecg_rr_tool*"]
